// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages fareType should render correctly 1`] = `
<Component
  description="Fare Type selection page of the Create Fares Data Service"
  errors={Array []}
  title="Fare Type - Create Fares Data Service "
>
  <CsrfForm
    action="/api/fareType"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <div
      className="govuk-form-group "
    >
      <fieldset
        aria-describedby="fare-type-page-heading"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--l"
        >
          <h1
            className="govuk-fieldset__heading"
            id="fare-type-page-heading"
          >
            Select a fare type
          </h1>
        </legend>
        <span
          className="govuk-hint"
          id="fare-type-operator-hint"
        >
           
        </span>
        <FormElementWrapper
          errorClass="govuk-radios--error"
          errorId="fare-type-single"
          errors={Array []}
        >
          <FareTypeRadios
            otherFares={
              Array [
                Object {
                  "fareType": "multiOperator",
                  "label": "Multi-operator - a ticket that covers more than one operator",
                },
                Object {
                  "fareType": "schoolService",
                  "label": "School service - a ticket available to pupils in full-time education",
                },
              ]
            }
            standardFares={
              Array [
                Object {
                  "fareType": "single",
                  "label": "Single ticket - point to point",
                },
                Object {
                  "fareType": "period",
                  "label": "Period ticket (day, week, month and annual)",
                },
                Object {
                  "fareType": "return",
                  "label": "Return ticket - single service",
                },
                Object {
                  "fareType": "flatFare",
                  "label": "Flat fare ticket - single journey",
                },
              ]
            }
          />
        </FormElementWrapper>
      </fieldset>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages fareType should render correctly for a scheme operator 1`] = `
<Component
  description="Fare Type selection page of the Create Fares Data Service"
  errors={Array []}
  title="Fare Type - Create Fares Data Service "
>
  <CsrfForm
    action="/api/fareType"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <div
      className="govuk-form-group "
    >
      <fieldset
        aria-describedby="fare-type-page-heading"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--l"
        >
          <h1
            className="govuk-fieldset__heading"
            id="fare-type-page-heading"
          >
            Select a fare type
          </h1>
        </legend>
        <span
          className="govuk-hint"
          id="fare-type-operator-hint"
        >
           
        </span>
        <FormElementWrapper
          errorClass="govuk-radios--error"
          errorId="fare-type-single"
          errors={Array []}
        >
          <FareTypeRadios
            otherFares={Array []}
            standardFares={
              Array [
                Object {
                  "fareType": "period",
                  "label": "Period geozone ticket (day, week, month and annual in a zone)",
                },
                Object {
                  "fareType": "flatFare",
                  "label": "Flat fare ticket - single journey",
                },
              ]
            }
          />
        </FormElementWrapper>
      </fieldset>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages fareType should render error messaging when errors are passed to the page 1`] = `
<Component
  description="Fare Type selection page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "Choose a fare type from the options",
        "id": "fare-type-single",
      },
    ]
  }
  title="Fare Type - Create Fares Data Service "
>
  <CsrfForm
    action="/api/fareType"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Choose a fare type from the options",
            "id": "fare-type-single",
          },
        ]
      }
    />
    <div
      className="govuk-form-group govuk-form-group--error"
    >
      <fieldset
        aria-describedby="fare-type-page-heading"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--l"
        >
          <h1
            className="govuk-fieldset__heading"
            id="fare-type-page-heading"
          >
            Select a fare type
          </h1>
        </legend>
        <span
          className="govuk-hint"
          id="fare-type-operator-hint"
        >
           
        </span>
        <FormElementWrapper
          errorClass="govuk-radios--error"
          errorId="fare-type-single"
          errors={
            Array [
              Object {
                "errorMessage": "Choose a fare type from the options",
                "id": "fare-type-single",
              },
            ]
          }
        >
          <FareTypeRadios
            otherFares={
              Array [
                Object {
                  "fareType": "multiOperator",
                  "label": "Multi-operator - a ticket that covers more than one operator",
                },
                Object {
                  "fareType": "schoolService",
                  "label": "School service - a ticket available to pupils in full-time education",
                },
              ]
            }
            standardFares={
              Array [
                Object {
                  "fareType": "single",
                  "label": "Single ticket - point to point",
                },
                Object {
                  "fareType": "period",
                  "label": "Period ticket (day, week, month and annual)",
                },
                Object {
                  "fareType": "return",
                  "label": "Return ticket - single service",
                },
                Object {
                  "fareType": "flatFare",
                  "label": "Flat fare ticket - single journey",
                },
              ]
            }
          />
        </FormElementWrapper>
      </fieldset>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;
